# tusa-android

./: .gitignore  build.gradle.kts  kill-kotlin-daemon.sh  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  save.txt
app/src/main/cpp/cache/: cache.cpp
app/src/main/cpp/geometry/: geometry.cpp  sphere.cpp
app/src/main/cpp/gl/: open_gl_interface.cpp
app/src/main/cpp/grid/: Box.cpp  Circle.cpp  Grid.cpp  GridElement.cpp  GridNode.cpp  IGridForm.cpp
app/src/main/cpp/grid/include/: Box.h  Circle.h  Grid.h  GridElement.h  GridNode.h  IGridForm.h
app/src/main/cpp/grid_avatars/: AvatarCollisionShift.cpp  AvatarIntersection.cpp  Box.cpp  Circle.cpp  CircleElement.cpp  CircleNode.cpp  Grid.cpp  GridElement.cpp  GridNode.cpp  IGridForm.cpp
app/src/main/cpp/include/cache/: cache.h
app/src/main/cpp/include/geometry/: geometry.h  sphere.h
app/src/main/cpp/include/gl/: cube_example.h  open_gl_interface.h  triangle_example.h
app/src/main/cpp/include/map/: linestring_handler.h  map.h  mercator.h  polygon_handler.h  tile.h  tiles_storage.h
app/src/main/cpp/include/network/: get_tile_request.h
app/src/main/cpp/include/renderer/: center_borders_cords.h  corners_cords.h  map_draw_call.h  point.h  render_tile_coordinates.h  render_tile_hash.h  render_tiles_enum.h  renderer.h  tile_cords.h  tile_node.h  user_marker.h  visible_tile_render_mode.h  visible_tiles_block.h  visible_tiles_result.h
app/src/main/cpp/include/shader/: avatar_on_map_new_shader.h  avatar_on_map_shader.h  avatar_ray_shader.h  avatars_on_map_big_zoom_shader.h  path_text_shader.h  plain_shader.h  planet2_shader.h  planet3_f_rend.h  planet3_shader.h  planet_glow_shader.h  planet_shader.h  road_shader.h  shader.h  shaders_bucket.h  space_dark_shader.h  stars_shader.h  symbol_shader.h  texture_shader.h  title_map_shader.h  user_marker_shader.h
app/src/main/cpp/include/style/: style.h  style_expecter.h
app/src/main/cpp/include/symbols/: symbol.h  symbols.h
app/src/main/cpp/include/util/: android_log.h  eigen_gl.h  feature_geometry_block.h
app/src/main/cpp/map/: linestring_handler.cpp  map.cpp  mercator.cpp  polygon_handler.cpp  tile.cpp  tiles_storage.cpp  visible_tile_render_mode.cpp
app/src/main/cpp/map_unit_1/: CameraPos.cpp  MapCamera.cpp  MapPolygon.cpp  MapPolygonAggregated.cpp  MapSimpleLine.cpp  MapStyle.cpp  MapSymbols.cpp  MapTest.cpp  MapTile.cpp  MapTileGetter.cpp  MapTileRender.cpp  PathTextCache.cpp  PointForTextPathCache.cpp  PointHandler.cpp  Region.cpp
app/src/main/cpp/map_unit_1/include/: CameraPos.h  MapCamera.h  MapFpsCounter.h  MapPolygonAggregated.h  MapSimpleLine.h  MapStyle.h  MapSymbols.h  MapTest.h  MapTile.h  MapTileGetter.h  MapTileRender.h  PathTextCache.h  PointForTextPathCache.h  PointHandler.h  Region.h
app/src/main/cpp/map_unit_2/: AnimateCameraTo.cpp  AvatarAtlasPointer.cpp  AvatarsGroup.cpp  ByLayersDraw.cpp  DrawMap.cpp  DrawMapData.cpp  DrawSymbol.cpp  DrawTextAlongPath.cpp  DrawTitlesThreadInput.cpp  FromLatLonToSpherePos.cpp  IGetPointData.cpp  IntersectionBox.cpp  MapColors.cpp  MapControls.cpp  MapControls2.cpp  MapEnvironment.cpp  MapNumbers.cpp  MapRenderer.cpp  MapRenderer2.cpp  MapSimplePoint.cpp  MarkerMapTitle.cpp  Markers.cpp  PrepareCharAtlas.cpp  RenderTextureData.cpp  ReservedList.cpp  RoadLettersPtr.cpp  SmoothMapTextureRender.cpp  SquarePointShader.cpp  Symbol.cpp  SymbolInAtlas.cpp  TextTexture.cpp  TextureUtils.cpp  TileAndMatrix.cpp  TileCacheM.cpp  TransferTilesToGPU.cpp  UserMarker.cpp  UserMarker2.cpp
app/src/main/cpp/map_unit_2/include/: AnimateCameraTo.h  AvatarAtlasPointer.h  AvatarsGroup.h  ByLayersDraw.h  DrawMap.h  DrawMapData.h  DrawSymbol.h  DrawTextAlongPath.h  DrawTitlesThreadInput.h  FromLatLonToSpherePos.h  IGetPointData.h  IntersectionBox.h  MapColors.h  MapControls.h  MapEnvironment.h  MapNumbers.h  MapRenderer.h  MapRenderer2.h  MapSimplePoint.h  MapSquarePoints.h  MapWideLine.h  MarkerMapTitle.h  Markers.h  OnTilePathText.h  PrepareCharAtlas.h  RenderTextureData.h  ReservedList.h  RoadLettersPtr.h  SimplePointShader.h  SmoothMapTextureRender.h  Symbol.h  SymbolInAtlas.h  TextTexture.h  TextureUtils.h  TileAndMatrix.h  TileCacheM.h  TransferTilesToGPU.h  UserMarker.h  UserMarker2.h
app/src/main/cpp/network/: get_tile_request.cpp
app/src/main/cpp/new_map/: MapCamera.cpp  MapControls.cpp  MapFpsCounter.cpp  MapGeometry.cpp  MapRenderer.cpp  MapStyle.cpp  MapSymbols.cpp  MapTest.cpp  MapTile.cpp  MapTileGetter.cpp  MapTileNode.cpp  MapTilePos.cpp  MapTileRender.cpp  MapVisibleTiles.cpp
app/src/main/cpp/new_map/include/: MapCamera.h  MapControls.h  MapGeometry.h  MapPolygon.h  MapPolygonAggregated.h  MapRenderer.h  MapSimpleLine.h  MapStyle.h  MapSymbols.h  MapTest.h  MapTile.h  MapTileGetter.h  MapTileNode.h  MapTilePos.h  MapTileRender.h  MapVisibleTiles.h
app/src/main/cpp/new_map3/: CircularBuffer.cpp  MapNumbers.cpp  MapRenderer2.cpp  MapSquarePoints.cpp  MapWideLine.cpp  SimplePointShader.cpp
app/src/main/cpp/new_map3/include/: CircularBuffer.h  DrawMap.h  DrawMapData.h  MapColors.h  MapControls2.h  MapEnvironment.h  MapNumbers.h  MapRenderer2.h  MapSimplePoint.h  MapSquarePoints.h  MapWideLine.h  (+2 more)
app/src/main/cpp/renderer/: center_borders_cords.cpp  corners_cords.cpp  map_draw_call.cpp  point.cpp  render_tile_coordinates.cpp  render_tile_hash.cpp  render_tiles_enum.cpp  renderer.cpp  tile_cords.cpp  tile_node.cpp  user_marker.cpp  visible_tiles_block.cpp  visible_tiles_result.cpp
app/src/main/cpp/shader/: avatar_on_map_new_shader.cpp  avatar_on_map_shader.cpp  avatar_ray_shader.cpp  avatars_on_map_big_zoom_shader.cpp  path_text_shader.cpp  plain_shader.cpp  planet2_shader.cpp  planet3_f_rend.cpp  planet3_shader.cpp  planet_glow_shader.cpp  planet_shader.cpp  road_shader.cpp  shader.cpp  shaders_bucket.cpp  space_dark_shader.cpp  stars_shader.cpp  symbol_shader.cpp  texture_shader.cpp  title_map_shader.cpp  user_marker_shader.cpp
app/src/main/cpp/style/: style.cpp  style_expecter.cpp
app/src/main/cpp/symbols/: symbol.cpp  symbols.cpp
app/src/main/cpp/util/: eigen_gl.cpp
(+464 files in other folders)
